remote flow - add remaining screens, other minor changes

--- a/app/views/crime-remote/citizen-crime-primer.html
+++ b/app/views/crime-remote/citizen-crime-primer.html
@@ -31,7 +31,7 @@
           <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">Please confirm that you have read and understood the above by ticking this box</label>
         </div>
         <br>
-        <a href="/crime-remote/obconsent" class="govuk-c-button">Continue</a>
+        <a href="/crime-remote/citizen-obconsent" class="govuk-c-button">Continue</a>
 
       </div>
     </div>
