--- a/app/views/crime-remote/citizen-dwpconf.html
+++ b/app/views/crime-remote/citizen-dwpconf.html
@@ -73,8 +73,8 @@
           </div>
         </dl>
         </br>
-        <a href="/crime-remote/citizen-bank-success" class="govuk-c-button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/crime/dwpdetails">Back</a>
+        <a href="/crime-remote/citizen-obbank" class="govuk-c-button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="govuk-c-back-link" href="/crime-remote/citizen-dwpdetails">Back</a>
 
       </div>
     </div>
