--- a/app/views/crime-remote/citizen-dwpdetails.html
+++ b/app/views/crime-remote/citizen-dwpdetails.html
@@ -24,7 +24,7 @@
           Enter your tax and benefits details
         </h1>
 
-        <form class="form" action="/crime-remote/dwpconf" method="post">
+        <form class="form" action="/crime-remote/citizen-dwpconf" method="post">
 
           <label class="govuk-c-label" for="national-insurance-number">
             Enter your National Insurance number
@@ -63,7 +63,7 @@
           </fieldset>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/crime/obconsent">Back</a>
+          <a class="govuk-c-back-link" href="/crime-remote/citizen-obconsent">Back</a>
 
         </form>
 
