--- a/app/views/crime-remote/citizen-final-branch.html
+++ b/app/views/crime-remote/citizen-final-branch.html
@@ -19,9 +19,14 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <h1 class="govuk-heading-xl">
-          Thank you for completing the open banking process
-        </h1>
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6">
+          <h2 class="govuk-c-panel__title">
+            Thank you for completing the open banking process
+          </h2>
+          <div class="govuk-c-panel__body">
+          </div>
+        </div>
+
 
         <p class="govuk-body">A notification has been sent to your solicitor indicating that you have completed the process</p>
         <p class="govuk-body">You will be contacted by them in order to select the evidence and finish your legal aid application</p>
