--- a/app/views/crime-remote/citizen-obconsent.html
+++ b/app/views/crime-remote/citizen-obconsent.html
@@ -19,7 +19,7 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <form class="form" action="/crime-remote/dwpdetails" method="post">
+        <form class="form" action="/crime-remote/citizen-dwpdetails" method="post">
 
           <div class="govuk-c-checkboxes">
             <fieldset class="govuk-c-fieldset">
@@ -51,7 +51,7 @@
           </br>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/crime/start">Back</a>
+          <a class="govuk-c-back-link" href="/crime-remote/citizen-crime-primer">Back</a>
 
         </form>
 
