--- a/app/views/crime-remote/means-result.html
+++ b/app/views/crime-remote/means-result.html
@@ -16,18 +16,25 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 14 of 15</b></p>
+    <p class="govuk-body"><b>Step 24 of 24</b></p>
 
     <div class="govuk-o-grid">
-      <div class="govuk-o-grid__item govuk-o-grid__item">
+      <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
           Your provisional result
         </h1>
 
-        <h2 class="govuk-heading">
-          You should be eligible for legal aid
-        </h2></br>
+
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6">
+          <h2 class="govuk-c-panel__title">
+            Provisional result:
+          </h2>
+          <div class="govuk-c-panel__body">
+            You should be eligible for financial help
+          </div>
+        </div>
+
         <p class="govuk-body">
           We will complete final checks on any pending or outstanding items when you submit your application. We will work out whether you need to pay anything and let you know the result.
         </p>
@@ -51,41 +58,41 @@
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
-                <tr class="govuk-c-table__row">
+  <!--              <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Main dwelling</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Additional property</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Land</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Timeshare</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
-                </tr>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                </tr> -->
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Bank accounts</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£470.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
-                <tr class="govuk-c-table__row">
+    <!--            <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Third-party bank accounts</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Investments</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
-                </tr>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                </tr> -->
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Other savings</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1400.00</td>
@@ -96,41 +103,41 @@
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1000.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
                 </tr>
-                <tr class="govuk-c-table__row">
+  <!--              <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Policies</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Wills</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Valuable possessions</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Motor vehicles</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Money due</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Other capital</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" style="border-width:thick;">Trusts</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick; text-align:right">N/A</td>
-                </tr>
+                  <td class="govuk-c-table__cell" style="border-width:thick; text-align:right"></td>
+                </tr> -->
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total capital</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,870.00</td>
@@ -161,20 +168,20 @@
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£2,245.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
-                <tr class="govuk-c-table__row">
+  <!--              <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total benefits</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
-                </tr>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
+                </tr> -->
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Maintenance</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
-                <tr class="govuk-c-table__row">
+<!--                <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Financial support</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total other income</td>
@@ -185,7 +192,7 @@
                   <td class="govuk-c-table__cell" style="border-width:thick;">Redundancy income</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"><a href="">Verified</a></td>
-                </tr>
+                </tr> -->
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Gross income</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,495.00</td>
@@ -211,41 +218,41 @@
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
-                <tr class="govuk-c-table__row">
+<!--                <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">PAYE + NI</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Employment expenses</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right">N/A</td>
-                </tr>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                </tr> -->
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Child care</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
-                <tr class="govuk-c-table__row">
+  <!--              <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Dependants allowance</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Maintenance out</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
-                </tr>
+                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                </tr> -->
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Housing costs</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1200.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
-                <tr class="govuk-c-table__row">
+  <!--              <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" style="border-width:thick;">Criminal legal aid</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"><a href="">Verified</a></td>
-                </tr>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                </tr> -->
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total deductions</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£1,800.00</td>
@@ -265,8 +272,9 @@
           </div>
           </br>
 
-          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/crime/capitalshares">Back</a>
+          <a class="govuk-c-button govuk-c-button" href="/crime-remote/mandatory-evidence" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="govuk-c-back-link" href="/crime-remote/capitalshares">Back</a>
+
         </form>
       </div>
     </div>
