--- a/app/views/crime-remote/means-result.html
+++ b/app/views/crime-remote/means-result.html
@@ -26,7 +26,7 @@
         </h1>
 
 
-        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6">
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffcc00">
           <h2 class="govuk-c-panel__title">
             Provisional result:
           </h2>
