--- a/app/views/crime-remote/capture-email.html
+++ b/app/views/crime-remote/capture-email.html
@@ -33,7 +33,7 @@
           <br>
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
 
-          <a class="govuk-c-back-link" href="/crime/obconsent">Back</a>
+          <a class="govuk-c-back-link" href="/crime-remote/remote-access">Back</a>
 
         </form>
 
