Deletedunused pages. Added explain other functionality

--- a/app/views/crime-remote/capitalshares.html
+++ b/app/views/crime-remote/capitalshares.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 13 of 15</b></p>
+    <p class="govuk-body"><b>Step 26 of 28</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -34,7 +34,7 @@
             <input class="govuk-c-input govuk-!-width-two-thirds" id="cap-shares" name="cap-shares" placeholder="0.00" type="number">
           </div>
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/crime/capitalselect">Back</a>
+          <a class="govuk-c-back-link" href="/crime-remote/capitalselect">Back</a>
 
         </form>
       </div>
