--- a/app/views/crime-remote/citizen-identify-income-salary-other.html
+++ b/app/views/crime-remote/citizen-identify-income-salary-other.html
@@ -412,7 +412,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 11 of 24</b></p>
+    <p class="govuk-body"><b>Step 11 of 28</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -499,8 +499,8 @@
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="/crime-remote/citizen-other-income" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic/select-other">Back</a>
+        <a class="govuk-c-button govuk-c-button" href="/crime-remote/identify-outgoings" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="govuk-c-back-link" href="/crime-remote/citizen-select-other">Back</a>
 
       </div>
 
