--- a/app/views/crime-remote/explain-other-transfer.html
+++ b/app/views/crime-remote/explain-other-transfer.html
@@ -412,7 +412,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 17 of 28</b></p>
+    <p class="govuk-body"><b>Step 19 of 28</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -448,13 +448,10 @@
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="other-1-completed">
-
-                <a class="govuk-link" href="/crime-remote/explain-transfer">
-                  10 Jan 2018 - 34029802 - £300.00
+                        10 Jan 2018 - 34029802 - £300.00
                 </a>
-              </a>
-                <a class="govuk-link" href="/crime-remote/explain-transfer">
-                <strong class="task-completed" id="other-1-completed">Explain</strong>
+                <a class="govuk-link">
+                <strong class="task-completed" id="other-1-completed" style="background-color:#005ea5"> Explained</strong>
                 </a>
               </li>
               <li class="task-list-item">
@@ -505,8 +502,8 @@
       <br></br>
 
 
-        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/crime-remote/identify-outgoings-housing-childcare">Back</a>
+        <a class="govuk-c-button govuk-c-button" href="/crime-remote/citizen-other-income" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="govuk-c-back-link" href="/crime-remote/explain-transfer">Back</a>
 
       </div>
 
