--- a/app/views/crime-remote/obmultiple.html
+++ b/app/views/crime-remote/obmultiple.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 9 of 15</b></p>
+    <p class="govuk-body"><b>Step 22 of 28</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -43,7 +43,7 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/crime/check-evidence">Back</a>
+          <a class="govuk-c-back-link" href="/crime-remote/check-evidence">Back</a>
 
         </form>
 
