--- a/app/views/crime-remote/provider-case-management.html
+++ b/app/views/crime-remote/provider-case-management.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 15 of 15</b></p>
+    <p class="govuk-body"><b>Step 6 of 28</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -27,10 +27,14 @@
         <p class="govuk-body">Placeholder text</p>
 
         <br>
-        
+
         <a class="govuk-link" href="/crime-remote/citizen-identify-income">
           Joe blogs Case Ref:asdfgh1234
         </a>
+
+        <br>
+
+        <a class="govuk-c-back-link" href="/crime-remote/provider-onboard-eviselection">Back</a>
 
       </div>
     </div>
