--- a/app/views/crime-remote/provider-onboard.html
+++ b/app/views/crime-remote/provider-onboard.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 15 of 15</b></p>
+    <p class="govuk-body"><b>Step 5 of 26</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -23,11 +23,11 @@
           Provider onboard screen
         </h1>
 
-        <p class="govuk-body">The next screen will allow you to review the evidence submitted by your client via the open banking process </p>
-        <p class="govuk-body">You should review this evidence with them and complete the rest of the legal aid application</p>
+        <p class="govuk-body">The next screen will allow you to review and select the evidence returned by your client via the open banking process </p>
+        <p class="govuk-body">You should complete this process with them and finish the rest of the legal aid application</p>
 
         <br>
-        <a href="/crime-remote/provider-review-evidence" class="govuk-c-button">Continue</a>
+        <a href="/crime-remote/provider-case-management" class="govuk-c-button">Continue</a>
 
       </div>
     </div>
