--- a/app/views/crime-remote/citizen-bank-success.html
+++ b/app/views/crime-remote/citizen-bank-success.html
@@ -18,7 +18,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 6 of 15</b></p>
+    <p class="govuk-body"><b>Step 6 of 7</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -70,7 +70,7 @@
           <br>
 
           <a class="govuk-c-button govuk-c-button" href="/crime-remote/citizen-final-branch" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/crime/obbank">Back</a>
+          <a class="govuk-c-back-link" href="/crime-remote/citizen-obbank">Back</a>
 
         </div>
 
