--- a/app/views/crime-remote/citizen-identify-income.html
+++ b/app/views/crime-remote/citizen-identify-income.html
@@ -411,7 +411,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><strong>Step 7 of 24</strong></p>
+    <p class="govuk-body"><strong>Step 7 of 28</strong></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -486,7 +486,7 @@
         </ol>
 
         <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic/bank-success">Back</a>
+        <a class="govuk-c-back-link" href="/crime-remote/provider-case-management">Back</a>
 
       </div>
 
