--- a/app/views/crime-remote/explain-transfer.html
+++ b/app/views/crime-remote/explain-transfer.html
@@ -14,26 +14,28 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 3 of 28</b></p>
+    <p class="govuk-body"><b>Step 18 of 28</b></p>
 
     <div class="govuk-o-grid">
 
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Enter you e-mail address
+          Explain item
         </h1>
 
-        <form class="form" action="/crime-remote/remote-notification" method="post">
+        <form class="form" action="/crime-remote/explain-other-transfer" method="post">
 
           <label class="govuk-c-label" for="national-insurance-number">
-            Enter your E-mail address
+            What was this £300 transfer to account no. 34029482?
+            <span class="govuk-c-label__hint govuk-!-width-two-thirds">
+              Transfers to other accounts must be explained before your application can continue
+            </span>
           </label>
-          <input class="govuk-c-input govuk-!-width-one-third" id="national-insurance-number" name="national-insurance-number" type="text" required>
-          <br>
+          <input class="govuk-c-input govuk-!-width-two-thirds" id="transfer" name="transfer" type="text" required>
+          <br></br>
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-
-          <a class="govuk-c-back-link" href="/crime-remote/remote-access">Back</a>
+          <a class="govuk-c-back-link" href="/crime-remote/explain-other">Back</a>
 
         </form>
 
