--- a/app/views/crime-remote/mandatory-evidence.html
+++ b/app/views/crime-remote/mandatory-evidence.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 15 of 15</b></p>
+    <p class="govuk-body"><b>Step 28 of 28</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -33,7 +33,7 @@
           <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">Please confirm that you have read and understood the above by ticking this box</label>
         </div>
 
-        <a class="govuk-c-back-link" href="/crime/means-result">Back</a>
+        <a class="govuk-c-back-link" href="/crime-remote/means-result">Back</a>
 
       </div>
     </div>
