Copy changes to generic journey
Copy changes
- data storage
- 3 month history
- fix typo
Change flow
- move other income / outgoings to follow selection of transactions
- reorder numbering

--- a/app/views/generic/dwpconf.html
+++ b/app/views/generic/dwpconf.html
@@ -23,7 +23,7 @@
           Are your details correct?
         </h1>
 
-        <p class="govuk-body">Check the information you have given us or make changes if it is not correct.</p>
+        <p class="govuk-body">Check the information you have given is correct or make changes.</p>
 
         <h2 class="govuk-heading-m">
           Your details
