--- a/app/views/generic/identify-income-salary-other.html
+++ b/app/views/generic/identify-income-salary-other.html
@@ -421,11 +421,13 @@
               Tell us about your income
         </h2>
 
-        <p style="govuk-body">
-          Add an item and tell us about relevant transactions from your bank statement.
+         <p class="govuk-body">
+          Add relevant transactions from the last month of your bank statement.
+        </p>
+        <p class="govuk-body">
+          We use your 3 month transaction history to work out your average monthly income.
         </p>
 
-        <br>
         <details>
           <summary><span class="summary">What income should you tell us about?</span></summary>
 
@@ -499,7 +501,7 @@
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="/generic/other-income" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="govuk-c-button govuk-c-button" href="/generic/identify-outgoings" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a class="govuk-c-back-link" href="/generic/select-other">Back</a>
 
       </div>
