--- a/app/views/generic/identify-income.html
+++ b/app/views/generic/identify-income.html
@@ -417,14 +417,16 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          Tell us about your income
+          Tell us about your income 
         </h2>
 
-        <p style="govuk-body">
-          Add an item and tell us about relevant transactions from your bank statement.
+        <p class="govuk-body">
+          Add relevant transactions from the last month of your bank statement.
+        </p>
+        <p class="govuk-body">
+          We use your 3 month transaction history to work out your average monthly income.
         </p>
 
-        <br>
         <details>
           <summary><span class="summary">What income should you tell us about?</span></summary>
 
