--- a/app/views/generic/obconsent.html
+++ b/app/views/generic/obconsent.html
@@ -29,22 +29,23 @@
 
               <p class="govuk-body">We use the information to check how much you earn, how much you spend on things like childcare and whether you receive benefits.</p>
 
-              <p class="govuk-body">You decide what information you want to give. We only use the details to support your application. We do not use it for anything else.</p>
+              <p class="govuk-body">We only use the details to support your application. We do not use it for anything else. <a href="#">Find out how we use and store your personal data</a></p>
 
+              <div class="govuk-c-checkboxes__item">
+                <input class="govuk-c-checkboxes__input" id="other-departments" name="other-departments" type="checkbox">
+                <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
+                  <b>I am happy for you to check my tax and benefits status</b>
+                </label>
+              </div>
+              </br>
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="open-banking" name="open-banking" type="checkbox">
                 <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
                   <b>I am happy to share information from my online banking</b>
                 </label>
               </div>
-              </br>
+         
 
-              <div class="govuk-c-checkboxes__item">
-                <input class="govuk-c-checkboxes__input" id="other-departments" name="other-departments" type="checkbox">
-                <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
-                  <b>I am happy for you to check my tax and benefit status</b>
-                </label>
-              </div>
             </fieldset>
           </div>
 
