--- a/app/views/generic/obmultiple.html
+++ b/app/views/generic/obmultiple.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 19 of 24</b></p>
+    <p class="govuk-body"><b>Step 17 of 24</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -23,7 +23,7 @@
           Do you have an account or ISA with a different bank or building society?
         </h1>
 
-        <form class="form" action="/generic/multibank" method="get">
+        <form class="form" action="/generic/check-evidence" method="get">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
@@ -43,7 +43,7 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic/check-evidence">Back</a>
+          <a class="govuk-c-back-link" href="/generic/identify-outgoings-housing-childcare">Back</a>
 
         </form>
 
