--- a/app/views/generic/select-housing.html
+++ b/app/views/generic/select-housing.html
@@ -101,7 +101,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 14 of 24</b></p>
+    <p class="govuk-body"><b>Step 13 of 24</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -110,7 +110,7 @@
               Select mortgage, rent and council tax payments
         </h2>
 
-        <p style="govuk-body">We have listed items from your statement by the highest outgoing payment to help you.</p>
+         <p class="govuk-body">We have listed items from your statement by the highest outgoing payment to help you.</p>
 
         <details>
           <summary><span class="summary">What outgoings should you tell us about?</span></summary>
@@ -126,7 +126,7 @@
             </p>
           </div>
         </details>
-
+        <br>
         <table class="govuk-c-table--two-thirds" style="border-spacing:0">
 
           <thead class="govuk-c-table__head">
