--- a/app/views/generic/select-other.html
+++ b/app/views/generic/select-other.html
@@ -110,7 +110,7 @@
               Select any other types of income
         </h2>
 
-        <p style="govuk-body">We have listed items from your statement by the highest incoming payment to help you.</p>
+        <p class="govuk-body">We have listed items from your statement by the highest incoming payment to help you.</p>
 
         <details>
           <summary><span class="summary">What income should you tell us about?</span></summary>
@@ -130,7 +130,7 @@
             </p>
           </div>
         </details>
-
+        <br>
         <table class="govuk-c-table--two-thirds" style="border-spacing:0">
 
           <thead class="govuk-c-table__head">
