--- a/app/views/generic/benefits-kind.html
+++ b/app/views/generic/benefits-kind.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 19 of 24/b></p>
+    <p class="govuk-body"><b>Step 19 of 23</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
