--- a/app/views/generic/identify-income.html
+++ b/app/views/generic/identify-income.html
@@ -186,7 +186,6 @@
   sup,
   tt,
   var,
-  b,
   u,
   i,
   center,
@@ -411,13 +410,13 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><strong>Step 7 of 24</strong></p>
+    <p class="govuk-body"><b>Step 7 of 23</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          Tell us about your income 
+          Tell us about your income
         </h2>
 
         <p class="govuk-body">
