--- a/app/views/generic/means-result.html
+++ b/app/views/generic/means-result.html
@@ -16,12 +16,12 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 24 of 24</b></p>
+    <p class="govuk-body"><b>Step 23 of 23</b></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6">
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
           <h2 class="govuk-c-panel__title">
             Provisional result:
           </h2>
@@ -161,7 +161,7 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total gross wage</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£2,245.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
                 </tr>
   <!--              <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total benefits</td>
