Copy changes to crime
Wording changes
Rewiring to omit banking loop question
TBD - step numbering

--- a/app/views/crime-remote/benefits-kind.html
+++ b/app/views/crime-remote/benefits-kind.html
@@ -24,7 +24,7 @@
         </h1>
 
         <p class="govuk-body">
-          Benefits in kind include a company car, luncheon vouchers or health insurance.
+          Benefits in kind include a company car, travel card or health insurance.
         </p>
 
         <form class="form" action="/crime-remote/capital-assets" method="post">
@@ -47,7 +47,7 @@
           </div>
 
           <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/crime-remote/obmultiple">Back</a>
+          <a class="govuk-c-back-link" href="/crime-remote/check-evidence">Back</a>
 
         </form>
       </div>
