--- a/app/views/crime-remote/citizen-bank-success.html
+++ b/app/views/crime-remote/citizen-bank-success.html
@@ -27,10 +27,10 @@
           You have succesfully shared your account information
         </h2>
 
-        <p class="govuk-body">You have been logged out of your online banking.</p>
-
-        <p class="govuk-body">We have downloaded your transaction history for the last 3 months. You can use this to tell us more about your incoming and outgoing payments.</p>
-
+        <p class="govuk-body">You are now signed out to stop anyone using your online banking.</p>
+ 
+        <p class="govuk-body">We have downloaded your transaction history for the last 3 months. Your details will be shared with your legal representative and the Legal Aid Agency.</p>
+        
         <h2 class="govuk-heading-m">
           Your account(s)
         </h2>
