--- a/app/views/crime-remote/citizen-crime-primer.html
+++ b/app/views/crime-remote/citizen-crime-primer.html
@@ -20,18 +20,20 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Legal aid open banking service
+          Share your financial details
         </h1>
 
-        <p class="govuk-body">The next screen will allow you to log in to your bank account and potentially select your incomings and outgoings in support of your legal aid application </p>
-        <p class="govuk-body">After selecting your evidence, it will be sent to your solicitor for review and you will continue with the application process</p>
+        <p class="govuk-body">You can use this service to share your details for your legal aid application.</p>
+        <p class="govuk-body">You might not have to pay legal aid if you are on certain benefits, a low income or have little or no savings.</p>
 
-        <div class="govuk-c-checkboxes__item">
-          <input class="govuk-c-checkboxes__input" id="confirm" name="confirm" type="checkbox" required>
-          <label class="govuk-c-label govuk-c-checkboxes__label" for="confirm">Please confirm that you have read and understood the above by ticking this box</label>
-        </div>
-        <br>
-        <a href="/crime-remote/citizen-obconsent" class="govuk-c-button">Continue</a>
+         <p class="govuk-body"><b>What you will need</b></p>
+
+        <ul class="govuk-list govuk-list--bullet">
+          <li>your online banking details</li>
+          <li>your National Insurance number and date of birth</li>
+        </ul>
+
+        <a href="/crime-remote/citizen-obconsent" class="govuk-c-button">Start</a>
 
       </div>
     </div>
