--- a/app/views/crime-remote/citizen-obconsent.html
+++ b/app/views/crime-remote/citizen-obconsent.html
@@ -24,17 +24,17 @@
           <div class="govuk-c-checkboxes">
             <fieldset class="govuk-c-fieldset">
               <legend class="govuk-c-fieldset__legend">
-                <h1 class="govuk-heading-xl">Do you want to do your financial checks online?</h1>
+                <h1 class="govuk-heading-xl">Do you agree to share your details?</h1>
               </legend>
 
-              <p class="govuk-body">We can quickly check things such as salary, childcare costs and benefit payments using your online banking and National Insurance details.</p>
+              <p class="govuk-body">We use the information to check how much you earn, how much you spend on things like childcare and whether you receive benefits.</p>
 
-              <p class="govuk-body">You decide what information you want to give us. We only use the details to support your application. We do not use it for anything else.</p>
+              <p class="govuk-body">We only use the details to support your legal aid application. We do not use it for anything else. <a href="#">Find out how we use and store your personal data</a></p>
 
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="other-departments" name="other-departments" type="checkbox">
                 <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
-                  <b>I am happy for you to check my tax and benefit status</b><br>
+                  <b>I agree for you to check my tax and benefit status</b><br>
                   using my National Insurance number and date of birth
                 </label>
               </div>
@@ -44,7 +44,7 @@
           <div class="govuk-c-checkboxes__item">
             <input class="govuk-c-checkboxes__input" id="open-banking" name="open-banking" type="checkbox">
             <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
-                  <b>I am happy to share my account balance and statement</b><br>
+                  <b>I agree to share my account balance and statement</b><br>
                     using information from my online banking
                 </label>
           </div>
