--- a/app/views/crime-remote/explain-other.html
+++ b/app/views/crime-remote/explain-other.html
@@ -418,16 +418,31 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          Can you explain the following items
+          Can you explain the following transactions?
         </h2>
-        <br>
+        <p class="govuk-body">
+          We need to look at all of your incoming and outgoing payments. 
+        </p>
 
         <details>
-          <summary><span class="summary">What outgoings should you tell us about?</span></summary>
+          <summary><span class="summary">What should you tell us about?</span></summary>
 
           <div class="panel panel-border-narrow">
 
-            <p style="govuk-body">
+            <p style="govuk-body"><b>Incoming payments</b>
+              <ul>
+                <li>salary or wages from any jobs you have</li>
+                <li>private and state pension contributions</li>
+                <li>benefits such as Child Benefit, Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
+                <li>benefits in kind from your employer such as relocation payments</li>
+                <li>board from a family member, lodger or tenant</li>
+                <li>rent from another property</li>
+                <li>maintenance payments</li>
+                <li>student grant or loan</li>
+                <li>financial support from a friend or family member</li>
+              </ul>
+            </p>
+            <p style="govuk-body"><b>Outgoing payments</b>
               <ul>
                 <li>mortgage</li>
                 <li>rent, board or lodging</li>
@@ -443,7 +458,7 @@
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">1.</span>Transfers to other accounts
+                    <span class="task-list-section-number">1.</span>Transfers between accounts
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
@@ -473,7 +488,7 @@
           </li>
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">2. </span>Other transactions of note
+                    <span class="task-list-section-number">2. </span>Other transactions
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
