--- a/app/views/crime-remote/explain-transfer.html
+++ b/app/views/crime-remote/explain-transfer.html
@@ -21,15 +21,17 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Explain item
+           What was this £300 transfer to account no. 34029482?
         </h1>
+
+        <p class="govuk-body">We need to understand transfers between accounts for your application.</p>
 
         <form class="form" action="/crime-remote/explain-other-transfer" method="post">
 
           <label class="govuk-c-label" for="national-insurance-number">
-            What was this £300 transfer to account no. 34029482?
+           
             <span class="govuk-c-label__hint govuk-!-width-two-thirds">
-              Transfers to other accounts must be explained before your application can continue
+              Enter your explanation
             </span>
           </label>
           <input class="govuk-c-input govuk-!-width-two-thirds" id="transfer" name="transfer" type="text" required>
