--- a/app/views/crime-remote/identify-outgoings-with-housing.html
+++ b/app/views/crime-remote/identify-outgoings-with-housing.html
@@ -421,11 +421,12 @@
         <h2 class="govuk-heading-xl">
               Tell us about your outgoings
         </h2>
-        <p style="govuk-body">
-          Add an item and tell us about relevant transactions from your bank statement.
+        <p class="govuk-body">
+          Add relevant transactions from the last month of your bank statement.
         </p>
-
-        <br>
+        <p class="govuk-body">
+          We use your 3 month transaction history to work out your average monthly outgoings.
+        </p>
 
         <details>
           <summary><span class="summary">What outgoings should you tell us about?</span></summary>
@@ -448,7 +449,7 @@
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">1. </span>Mortage, rent and council tax
+                    <span class="task-list-section-number">1. </span>Mortgage, rent and council tax
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
