--- a/app/views/crime-remote/provider-onboard.html
+++ b/app/views/crime-remote/provider-onboard.html
@@ -20,14 +20,14 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Provider onboard screen
+          Joe Bloggs has shared financial details
         </h1>
 
-        <p class="govuk-body">The next screen will allow you to review and select the evidence returned by your client via the open banking process </p>
-        <p class="govuk-body">You should complete this process with them and finish the rest of the legal aid application</p>
+        <p class="govuk-body">We have successfully downloaded 3 months' transaction history from <b>Joe.Bloggs@hotmail.com</b>.</p>
+        <p class="govuk-body">Use the information to give details about incoming and outgoing payments, and complete financial checks for legal aid.</p>
 
         <br>
-        <a href="/crime-remote/provider-case-management" class="govuk-c-button">Continue</a>
+        <a href="/crime-remote/citizen-identify-income" class="govuk-c-button">Continue</a>
 
       </div>
     </div>
