--- a/app/views/crime-remote/remote-access.html
+++ b/app/views/crime-remote/remote-access.html
@@ -20,16 +20,11 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do your client need to access their bank account remotely?
+          Do you want to do the financial checks remotely?
         </h1>
 
         <p class="govuk-body">
-          If your client is unable to provide their banking details immedietely we can send them a link via e-mail that will allow them to log in to their bank account.
-        </p>
-
-        <p class="govuk-body">
-          Once they have entered their banking details we will send you a notification to log back into this process and select the remaining evidence.
-        </p>
+          Let people share their financial details from home or another location.
 
         <form class="form" action="/crime-remote/capture-email" method="get">
 
