--- a/app/views/crime-remote/remote-notification.html
+++ b/app/views/crime-remote/remote-notification.html
@@ -20,15 +20,11 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          An invitation has been sent for your client to complete the open banking process
+          Email sent successfully
         </h1>
 
         <p class="govuk-body">
-          <b>An e-mail has been sent to Joe.Blogs@hotmail.com that allows them to log in to the service</b>
-        </p>
-
-        <p class="govuk-body">
-          You will be notified when they have completed the process and will have a chance to review the evidence before continuing with the application
+          We have sent an email to <b>Joe.Bloggs@hotmail.com</b> with details on how to complete their financial checks.
         </p>
 
         <a class="govuk-link" href="/crime-remote/citizen-crime-primer">
