--- a/app/views/crime-remote/start.html
+++ b/app/views/crime-remote/start.html
@@ -27,7 +27,7 @@
           What is your current financial situation?
         </h1>
 
-        <p class="govuk-body">This information helps us check your financial details for the last 3 months.</p>
+        <p class="govuk-body">This information helps us to check your financial details for the last 3 months.</p>
 
         <form class="form" action="/crime-remote/remote-access" method="post">
 
