--- a/app/views/crime-remote/capture-email.html
+++ b/app/views/crime-remote/capture-email.html
@@ -21,13 +21,17 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Enter you e-mail address
+          Enter email address
         </h1>
+
+
+        <p class="govuk-body">
+          We will send an email to the person who needs to share their financial details.
 
         <form class="form" action="/crime-remote/remote-notification" method="post">
 
           <label class="govuk-c-label" for="national-insurance-number">
-            Enter your E-mail address
+            Enter email address
           </label>
           <input class="govuk-c-input govuk-!-width-one-third" id="national-insurance-number" name="national-insurance-number" type="text" required>
           <br>
