--- a/app/views/crime-remote/citizen-final-branch.html
+++ b/app/views/crime-remote/citizen-final-branch.html
@@ -20,15 +20,29 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6">
-          <h2 class="govuk-c-panel__title">
-            Thank you for completing the open banking process
+            <h2 class="govuk-c-panel__title">
+            Details submitted
           </h2>
+          <p class="govuk-c-panel__body">Your reference:</p>
+             <p class="govuk-c-panel__body">2017/LAA/4ewrqfdd</p>
+
           <div class="govuk-c-panel__body">
           </div>
         </div>
 
-        <p class="govuk-body">A notification has been sent to your solicitor indicating that you have completed the process</p>
-        <p class="govuk-body">You will be contacted by them in order to select the evidence and finish your legal aid application</p>
+        <p class="govuk-body">If you have any questions or have forgotten to share any important financial information, you should contact your legal representative.</p>
+
+        <p class="govuk-body"><b>What happens next?</b></p>
+      
+        <p class="govuk-body">Your legal representative will arrange a follow-up meeting.</p>
+
+      
+        <p class="govuk-body">We will let you know the result of your legal aid application once you have completed the financial checks with your legal representative.</p>
+
+         <a class="govuk-c-button govuk-c-button" href="/crime-remote/provider-onboard" role="button">Finish</a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="govuk-c-back-link" href="/crime-remote/citizen-bank-success">Back</a>
+
+          <p></p>
 
         <a class="govuk-link" href="/crime-remote/provider-onboard">
           This link will take you to the provider open banking review screen
