--- a/app/views/crime-remote/citizen-other-income.html
+++ b/app/views/crime-remote/citizen-other-income.html
@@ -24,13 +24,13 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Do you have other income and outgoings that are not paid into your bank?
+              Do you have any other income and outgoings that are not paid into your bank?
         </h2>
 
         <div class="govuk-c-radios">
           <fieldset class="govuk-c-fieldset">
             <legend class="govuk-c-fieldset__legend">
-              <h4 class="govuk-heading">You will need to provide evidence to support these transactions.</h4>
+              <p class="govuk-body">You will need to provide evidence to support these transactions.</p>
             </legend>
             <div class="govuk-c-radios__item">
               <input class="govuk-c-radios__input" id="non-bank-money-1" name="non-bank-money" type="radio" value="yes" required>
