--- a/app/views/crime-remote/citizen-select-salary.html
+++ b/app/views/crime-remote/citizen-select-salary.html
@@ -56,7 +56,7 @@
               Select your salary or wages
         </h2>
 
-        <p style="govuk-body">We have listed items from your statement by the highest incoming payment to help you.</p>
+        <p class="govuk-body">We have listed items from your statement by the highest incoming payment to help you.</p>
 
         <table class="govuk-c-table--two-thirds" style="border-spacing:0">
 
