--- a/app/views/crime-remote/identify-evidence.html
+++ b/app/views/crime-remote/identify-evidence.html
@@ -23,21 +23,9 @@
           Your transaction history
         </h1>
 
-        <p class="govuk-body">We use your full transaction history to work out if you qualify for legal aid.</p>
-
-        <p class="govuk-body">To help us understand your statement, tell us about about your regular incoming payments (such as wages, benefits or pension) and major outgoings (such as childcare, mortgage, rent or housing costs).
+        <p class="govuk-body">We look at your regular incoming payments (such as wages, benefits or pension) and major outgoings (such as childcare, rent or mortgage).</p>
 
           <p class="govuk-body">You do not need to tell us about smaller, everday purchases.</p>
-
-
-          <p class="govuk-body"><b>How to choose your transactions</b></p>
-
-          <ul class="govuk-list govuk-list--bullet">
-            <li>Check the box next to the item on your bank statement</li>
-            <li>Select the type of transaction (e.g. salary or childcare)</li>
-            <li>Select how often you receive or pay out money (e.g. weekly or monthly)</li>
-            <li>Choose all relevant items and click 'Continue'</li>
-          </ul>
 
           <form class="form" action="/civil/check-evidence" method="post">
 
