--- a/app/views/crime-remote/select-childcare.html
+++ b/app/views/crime-remote/select-childcare.html
@@ -110,7 +110,7 @@
               Select your childcare payments
         </h2>
 
-        <p style="govuk-body">We have listed items from your statement by the highest outgoing payment to help you.</p>
+        <p class="govuk-body">We have listed items from your statement by the highest outgoing payment to help you.</p>
 
         <details>
           <summary><span class="summary">What outgoings should you tell us about?</span></summary>
@@ -124,7 +124,7 @@
             </p>
           </div>
         </details>
-
+        <br>
         <table class="govuk-c-table--two-thirds" style="border-spacing:0">
 
           <thead class="govuk-c-table__head">
