--- a/app/views/crime-remote/select-housing.html
+++ b/app/views/crime-remote/select-housing.html
@@ -110,7 +110,8 @@
               Select mortgage, rent and council tax payments
         </h2>
 
-        <p style="govuk-body">We have listed items from your statement by the highest outgoing payment to help you.</p>
+        <p class="govuk-body">We have listed items from your statement by the highest outgoing payment to help you.</p>
+
 
         <details>
           <summary><span class="summary">What outgoings should you tell us about?</span></summary>
@@ -126,7 +127,7 @@
             </p>
           </div>
         </details>
-
+        <br>
         <table class="govuk-c-table--two-thirds" style="border-spacing:0">
 
           <thead class="govuk-c-table__head">
