Amend explain other screen
Remove unnecessary transactions and emphasise statement

--- a/app/views/crime-remote/explain-other.html
+++ b/app/views/crime-remote/explain-other.html
@@ -421,7 +421,7 @@
           Can you explain the following transactions?
         </h2>
         <p class="govuk-body">
-          We need to look at all of your incoming and outgoing payments. 
+          We need to look at all of your incoming and outgoing payments.
         </p>
 
         <details>
@@ -458,67 +458,36 @@
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">1.</span>Transfers between accounts
+                    <span class="task-list-section-number">Transfers between accounts</span>
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="other-1-completed">
-
+                  <a class="govuk-link" href="/crime-remote/explain-transfer">
+                    10 Jan 2018 - 34029802 - £300.00
+                  </a>
+                </a>
                 <a class="govuk-link" href="/crime-remote/explain-transfer">
-                  10 Jan 2018 - 34029802 - £300.00
+                  <strong class="task-completed" id="other-1-completed">Explain</strong>
                 </a>
-              </a>
-                <a class="govuk-link" href="/crime-remote/explain-transfer">
-                <strong class="task-completed" id="other-1-completed">Explain</strong>
-                </a>
-              </li>
-              <li class="task-list-item">
-                <a class="task-name" aria-describedby="other-2-completed">
-                        17 Jan 2018 - 56030220 - £250.00
-                </a>
-                <strong class="task-completed" id="other-2-completed">Explain</strong>
-              </li>
-              <li class="task-list-item">
-                <a class="task-name" aria-describedby="other-3-completed">
-                        18 Jan 2018 - 12939382 - £115.00
-                </a>
-                <strong class="task-completed" id="other-3-completed">Explain</strong>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <h2 class="task-list-section">
-                    <span class="task-list-section-number">2. </span>Other transactions
-            </h2>
-            <ul class="task-list-items">
-              <li class="task-list-item">
-                <a class="task-name" aria-describedby="housing-4-completed">
-                        02 Jan 2018 - Payment to Jim - £600.00
-                </a>
-                <strong class="task-completed" id="other-4-completed">Explain</strong>
-              </li>
-              <li class="task-list-item">
-                <a class="task-name" aria-describedby="other-5-completed">
-                        01 Jan 2018 - Cash machine withdrawal - £120.00
-                </a>
-                <strong class="task-completed" id="other-5-completed">Explain</strong>
-              </li>
-              <li class="task-list-item">
-                <a class="task-name" aria-describedby="other-6-completed">
-                        22 Jan 2018 - Payment to nursery - £50.00
-                </a>
-                <strong class="task-completed" id="other-6-completed">Explain</strong>
               </li>
             </ul>
           </li>
         </ol>
 
+        <h3 class="govuk-heading-m">
+          View full transaction history
+        </h3>
+
+        <p class="govuk-body">
+          You can also review the full 3 months of transactions so that you can check it line by line. Your solicitor may wish to examine things in more detail.
+        </p>
+
         <a class="govuk-link" href="/crime-remote/identify-evidence">
-          View full statement
+          View your full transaction history
         </a>
 
-      <br></br>
-
+        <br></br>
 
         <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a class="govuk-c-back-link" href="/crime-remote/identify-outgoings-housing-childcare">Back</a>
