Amend means result screen
Change income status to pending

--- a/app/views/crime-remote/means-result.html
+++ b/app/views/crime-remote/means-result.html
@@ -161,7 +161,7 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total gross wage</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£2,245.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
                 </tr>
   <!--              <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total benefits</td>
