Customise Truelayer urls to work with heroku app

--- a/app/views/generic-truelayer/obbank.html
+++ b/app/views/generic-truelayer/obbank.html
@@ -1,5 +1,29 @@
 {% extends "layout.html" %} {% block page_title %} Evidence submission prototype {% endblock %} {% block content %}
 
+<head>
+
+  <script>
+    function goToTrueLayer() {
+
+      var domain = window.location.hostname;
+
+      if (domain == 'localhost') {
+        var redirect_uri = 'http://localhost:3000/'
+      } else {
+        var redirect_uri = 'https://laa-atp-express-evidence-proto.herokuapp.com/'
+      }
+
+      var url = 'https://auth.truelayer.com/?response_type=code&client_id=atptest-gaju&nonce=3473757588&scope=info%20accounts%20balance%20transactions&redirect_uri=' + redirect_uri + 'generic-truelayer/bank-success&enable_mock=true';
+
+      document.getElementById('truelayerRedirect').href = url;
+
+    }
+
+    window.onload = goToTrueLayer;
+  </script>
+
+</head>
+
 <body>
   <div class="govuk-o-width-container">
 
@@ -30,9 +54,7 @@
               You will now be redirected to a third party who will securely connect you to your bank.
             </p>
 
-            <a href="https://auth.truelayer.com/?response_type=code&client_id=atptest-gaju&nonce=3473757588&scope=info%20accounts%20balance%20transactions&redirect_uri=http://localhost:3000/generic-truelayer/bank-success&enable_mock=true" role="button" class="govuk-c-button">
-                Continue
-            </a> &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+            <a role="button" class="govuk-c-button" href="#" id="truelayerRedirect">Continue</a> &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
             <a class="govuk-c-back-link " href="/generic-truelayer/dwpconf ">Back</a>
 
           </form>
@@ -41,4 +63,5 @@
     </main>
   </div>
 </body>
+
 {% endblock %}
