Security and data warnings
Add reminders about security and data sharing

Removed step counter

--- a/app/views/generic/bank-success.html
+++ b/app/views/generic/bank-success.html
@@ -18,7 +18,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 6 of 23</b></p>
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -27,9 +27,17 @@
           You have succesfully shared your account information
         </h2>
 
-        <p class="govuk-body">You are now signed out to stop anyone using your online banking.</p>
+        <p class="govuk-body">We have downloaded 3 months of your transaction history. You can use this to tell us more about your financial situation.</p>
 
-        <p class="govuk-body">We have downloaded your transaction history for the last 3 months. You can use this to tell us more about your incoming and outgoing payments.</p>
+              <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
+              <h3>How we use your details</h3>
+              <br>
+              <ul class="govuk-list govuk-list--bullet">
+              <li>We check your transaction history for incomings and outgoings</li>
+              <li>We only use details for this application, nothing else</li>
+              <li>Your data is stored securely for 5 years and then destroyed</li>
+              </ul>
+              </div>
 
         <h2 class="govuk-heading-m">
           Your account(s)
