--- a/app/views/generic/identify-income-salary-other.html
+++ b/app/views/generic/identify-income-salary-other.html
@@ -411,7 +411,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 11 of 23</b></p>
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
