--- a/app/views/generic/obconsent.html
+++ b/app/views/generic/obconsent.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 2 of 23</b></p>
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -30,6 +30,17 @@
               <p class="govuk-body">We use the information to check how much you earn, how much you spend on things like childcare and whether you receive benefits.</p>
 
               <p class="govuk-body">We only use the details to support your application. We do not use it for anything else. <a href="#">Find out how we use and store your personal data</a></p>
+
+              <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
+              <h3>Keeping your details secure</h3>
+              <br>
+              <ul class="govuk-list govuk-list--bullet">
+              <li>Sign in safely to your online banking</li>
+              <li>Authorise temporary access to your accounts</li>
+              <li>We take 3 months of transactions to check your financial status</li>
+              <li>Your data is stored securely for 5 years and then destroyed</li>
+              </ul>
+              </div>
 
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="other-departments" name="other-departments" type="checkbox">
